[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/InitialMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/changa/Changa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/changa-regular.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]

size = 150
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="ButtonGroup" id=2]

resource_local_to_scene = true
_sections_unfolded = [ "Resource" ]

[node name="InitialMenu" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1281.0
margin_bottom = 600.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1281.0
margin_bottom = 277.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0.90625, 1, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "PONG"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants" ]

[node name="MarginContainer" type="CenterContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 281.0
margin_right = 1281.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Grow Direction" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 258.0
margin_top = 119.0
margin_right = 1022.0
margin_bottom = 200.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
custom_constants/separation = 100
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Rect", "Size Flags", "custom_constants" ]

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 188.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 2
_sections_unfolded = [ "Margin" ]

[node name="Host" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 188.0
margin_bottom = 81.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "HOST"
flat = false
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 288.0
margin_right = 476.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 2
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Join" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 188.0
margin_bottom = 81.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "JOIN"
flat = false
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 576.0
margin_right = 764.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Local" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 188.0
margin_bottom = 81.0
rect_min_size = Vector2( 180, 60 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = SubResource( 2 )
text = "LOCAL"
flat = false
align = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Host" to="." method="_on_Host_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer2/Join" to="." method="_on_Join_pressed"]

[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer3/Local" to="." method="_on_Local_pressed"]


